# idacast

./: CHANGELOG.md  Cargo.toml  README.md  shell.nix
resources/samples/bigrun/: schedules.json
resources/samples/teamcontest/: schedules.json
src/: app.rs  main.rs  ui.rs
src/app/: mod.rs  ui.rs
src/data/: mod.rs  raw_data.rs  schedules.rs  translation.rs  translation_data.rs
