[package]
name = "idacast"
version = "0.1.4"
description = "Idacast is a program that displays splatoon3's battle stage data from your terminal."
edition = "2024"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rywng/idacast/"
keywords = ["terminal", "game", "splatoon", "splatoon_3"]
categories = ["command-line-utilities"]

[dependencies]
cached = { version = "0.56.0", features = ["async", "async_tokio_rt_multi_thread", "disk_store"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive", "unstable-doc"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
reqwest = { version = "0.12.22", default-features = false, features = [
	"charset",
	"http2",
	"rustls-tls",
	"system-proxy",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.2", features = ["strum_macros"] }
strum_macros = "0.27.2"
sys-locale = "0.3.2"
tokio = { version = "1.46.1", features = ["full"] }
tokio-stream = "0.1.17"
unicode-width = "0.2.0"
