[package]
name = "idacast"
version = "0.1.8"
description = "Idacast is a program that displays splatoon3's battle stage data from your terminal."
edition = "2024"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rywng/idacast/"
keywords = ["terminal", "game", "splatoon", "splatoon_3"]
categories = ["command-line-utilities"]

[dependencies]
cached = { version = "0.56.*", features = ["async", "async_tokio_rt_multi_thread", "disk_store"] }
chrono = { version = "0.4.*", features = ["serde"] }
clap = { version = "4.5.*", features = ["derive", "unstable-doc"] }
color-eyre = "0.6.*"
crossterm = { version = "0.29.*", features = ["event-stream"] }
futures = "0.3.*"
ratatui = "0.29.*"
reqwest = { version = "0.12.*", default-features = false, features = [
	"charset",
	"http2",
	"rustls-tls",
	"system-proxy",
] }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
strum = { version = "0.27.*", features = ["strum_macros"] }
strum_macros = "0.27.*"
sys-locale = "0.3.*"
tokio = { version = "1.48.*", features = ["full"] }
tokio-stream = "0.1.*"
unicode-width = "0.2.*"
